# rust-todo-demo

./: .env  Cargo.toml  buildApp.Dockerfile  compose.yaml  design.md
pgInit/: init.sql  pg.Dockerfile
pgdata/: init.sql
src/: handlers.rs  main.rs  models.rs
src/handlers/: mod.rs
src/models/: mod.rs
test-reqs/: create_todo_rec.http  list_todos.http  root.http
