[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde", "default","std"]}
dotenv = "0.15"
env_logger = "0.11.5"
log = "0.4.19"
utoipa = { version = "5.2.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "debug-embed"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }